--- a/style.css
+++ b/style.css
@@ -4,8 +4,8 @@ body{
 }
 
 h2{
-    font-size: 24px;
-    font-weight: 400;
+    font-size: 35px;
+    font-weight: 461;
 }
 h1{
     color: #EC4C7A;
@@ -20,6 +20,10 @@ section{
     height: 870px;
 }
 
+.work-area{
+    height: 400px;
+}
+
 .half-width{
     width: 40%;
     float: left;
@@ -28,11 +32,11 @@ section{
 }
 
 .half-width img{
-    width: 75%;
+    width: 100%;
 }
 
 .container{
-    margin-top: 300px;
+    margin-top: 225px;
 }
 
 .link-button{
@@ -64,4 +68,67 @@ section{
 
 .dream-image img {
     height: 80%;
+}
+
+.work-heading{
+    text-align: center;
+    text-transform: capitalize;
+}
+
+.work-img{
+    width: 25%;
+    padding: 2%;
+    margin: 2%;
+    float: left;
+}
+
+.work-img img{
+    width: 100%;
+}    
+
+.feedback span{
+    color: gray;
+    font-size: 13px;
+}
+.feedback h3{
+    margin-bottom: 0;
+    font-weight: 600;
+    margin-top: 70px;
+}
+
+.feedback-area{
+    background-image: url("images/footer-bg.png");
+    height: 500px;
+}
+
+.description{
+    width: 50%;
+    text-align: center;
+    margin: auto;
+}
+
+.description p{
+    color: black;
+    margin-top: 25px;
+    margin-bottom: 65px;
+}
+
+.massage-area{
+    margin: auto;
+    width: 23%;
+    background-color: #EC4C7A;
+    border-radius: 3px;
+    padding: 26px 75px;
+    border-radius: 8px;
+}
+
+.massage-area span{
+    font-size: 12px;
+    color: white;
+}
+
+.massage-area h2{
+    margin-top: 0;
+    color: white;
+    font-size: 18px;
 }
